--- a/introduction/quick-start.mdx
+++ b/introduction/quick-start.mdx
@@ -16,8 +16,10 @@ cargo shuttle init --axum hello-world
 And to deploy it, write:
 
 ```sh
-cargo shuttle deploy And that's... it.
+cargo shuttle deploy 
 ```
+
+And that's... it.
 
 Feel free to build on-top of the generated `hello-world` example or take a stab
 at one of our [examples](examples/axum).
