--- a/examples/rocket.mdx
+++ b/examples/rocket.mdx
@@ -7,19 +7,19 @@ description:
 
 ## Hello world!
 
+[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/hello-world)
+
 Simple 'Hello world' app using Rocket.
 
-Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute
-the following command to initialize shuttle inside with the Rocket boilerplate.
+Create a new directory (`mkdir`) and move into it (`cd`) -- afterwards, execute the following command to initialize shuttle inside with the Rocket boilerplate.
 
 ```bash
 cargo shuttle init --rocket
 ```
 
-Make sure that your `cargo.toml` file looks as the one below -- having the right
-dependencies is key!
+Make sure that your `Cargo.toml` file looks like the one below -- having the right dependencies is key!
 
-```toml cargo.toml
+```toml
 [package]
 name = "hello-world"
 version = "0.1.0"
@@ -29,12 +29,11 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0-rc.2"
-shuttle-service = { version = "0.5.2", features = ["web-rocket"] }
+shuttle-service = { version = "0.6.0", features = ["web-rocket"] }
 ```
+Your `lib.rs` should look like this:
 
-Your lib.rs should look like this:
-
-```rust lib.rs
+```Rust
 #[macro_use]
 extern crate rocket;
 
@@ -50,9 +49,12 @@ async fn rocket() -> shuttle_service::ShuttleRocket {
     Ok(rocket)
 }
 ```
+Create a project, this will start an isolated deployer container for you under the hood:
+```bash
+cargo shuttle project new
+```
 
 Finally, to deploy your app, all you need to do is:
-
 ```bash
 cargo shuttle deploy
 ```
@@ -61,36 +63,25 @@ And your app is live! 🎉🎉🎉
 
 ## JWT Authentication
 
-This example shows how to use
-[Rocket request guards](https://rocket.rs/v0.5-rc/guide/requests/#request-guards)for
-authentication with [JSON Web Tokens](https://jwt.io/)(JWT for short). The idea
-is that all requests authenticate first at
-https://authentication-rocket-app.shuttleapp.rs/login to get a JWT. Then the JWT
-is sent with all requests requiring authentication using the HTTP header
-`Authorization: Bearer \<token\>`.
+[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/authentication)
 
-This example uses the [`jsonwebtoken`](https://github.com/Keats/jsonwebtoken)
-which supports symmetric and asymmetric secret encoding, built-in validations,
-and most JWT algorithms. However, this example only makes use of symmetric
-encoding and validation on the expiration claim.
+This example shows how to use [Rocket request guards](https://rocket.rs/v0.5-rc/guide/requests/#request-guards) for authentication with [JSON Web Tokens](https://jwt.io/) (JWT for short).
+The idea is that all requests authenticate first at https://authentication-rocket-app.shuttleapp.rs/login to get a JWT.
+Then the JWT is sent with all requests requiring authentication using the HTTP header `Authorization: Bearer <token>`.
+
+This example uses the [`jsonwebtoken`](https://github.com/Keats/jsonwebtoken) which supports symmetric and asymmetric secret encoding, built-in validations, and most JWT algorithms.
+However, this example only makes use of symmetric encoding and validation on the expiration claim.
 
 ### src/main.rs
-
 Three Rocket routes are registered in this file:
-
 1. `/public`: a route that can be called without needing any authentication.
-2. `/login`: a route for posting a JSON object with a username and password to
-   get a JWT.
-3. `/private`: a route that can only be accessed with a valid JWT.
+1. `/login`: a route for posting a JSON object with a username and password to get a JWT.
+1. `/private`: a route that can only be accessed with a valid JWT.
 
 ### src/claims.rs
-
-The bulk of this example is in this file. Most of the code can be transferred to
-other frameworks except for the FromRequest implementation, which is Rocket
-specific. This file contains a `Claims` object which can be expanded with more
-claims. A `Claims` can be created from a Bearer \<token\> string using
-`Claims::from_authorization()`. And a Claims object can also be converted to a
-token using `to_token()`.
+The bulk of this example is in this file. Most of the code can be transferred to other frameworks except for the `FromRequest` implementation, which is Rocket specific.
+This file contains a `Claims` object which can be expanded with more claims. A `Claims` can be created from a `Bearer <token>` string using `Claims::from_authorization()`.
+And a `Claims` object can also be converted to a token using `to_token()`.
 
 ```toml
 [package]
@@ -106,10 +97,10 @@ jsonwebtoken = { version = "8", default-features = false }
 lazy_static = "1.4"
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
-shuttle-service = { version = "0.5.2", features = ["web-rocket"] }
+shuttle-service = { version = "0.6.0", features = ["web-rocket"] }
 ```
 
-```rust
+```Rust
 // lib.rs
 use rocket::http::Status;
 use rocket::response::status::Custom;
@@ -190,7 +181,7 @@ async fn rocket() -> shuttle_service::ShuttleRocket {
 }
 ```
 
-```rust
+```Rust
 // claims.rs
 use chrono::{Duration, Utc};
 use jsonwebtoken::{
@@ -258,7 +249,7 @@ impl Claims {
         }
     }
 
-    /// Create a `Claims` from a 'Bearer \<token\>' value
+    /// Create a `Claims` from a 'Bearer <token>' value
     fn from_authorization(value: &str) -> Result<Self, AuthenticationError> {
         let token = value.strip_prefix(BEARER).map(str::trim);
 
@@ -333,69 +324,64 @@ mod tests {
 ```
 
 ### Deploy
-
 After logging into shuttle, use the following command to deploy this example:
 
+Create a project, this will start an isolated deployer container for you under the hood:
 ```bash
-$ cargo shuttle deploy
+cargo shuttle project new
 ```
 
-Notice how this deploy fails since one of the test fails. See the TODO at the
-top of `src/claims.rs` on how to fix the test. Once the code is fixed, try to
-deploy again. Now make a note of the Host for the deploy to use in the examples
-below. Or just use `authentication-rocket-app.shuttleapp.rs` as the host below.
+```bash
+cargo shuttle deploy
+```
+
+Notice how this deploy fails since one of the test fails. See the `TODO` at the top of `src/claims.rs` on how to fix the test. Once the code is fixed, try to deploy again.
+Now make a note of the `Host` for the deploy to use in the examples below. Or just use `authentication-rocket-app.shuttleapp.rs` as the host below.
 
 ### Seeing it in action
+First, we should be able to access the public endpoint without any authentication using:
 
-First, we should be able to access the public endpoint without any
-authentication using:
-
-```bash
+```sh
 $ curl https://<host>/public
 ```
 
 But trying to access the private endpoint will fail with a 403 forbidden:
 
-```bash
+```sh
 $ curl https://<host>/private
 ```
 
 So let's get a JWT from the login route first:
 
-```bash
+
+```sh
 $ curl --request POST --data '{"username": "username", "password": "password"}' https://<host>/login
 ```
 
 Accessing the private endpoint with the token will now succeed:
 
-```bash
-$ curl --header "Authorization: Bearer \<token\>" https://<host>/private
+```sh
+$ curl --header "Authorization: Bearer <token>" https://<host>/private
 ```
 
-The token is set to expire in 5 minutus, so wait a while and try to access the
-private endpoint again. Once the token has expired, a user will need to get a
-new token from login. Since tokens usually have a longer than 5 minutes
-expiration time, we can create a `/refresh` endpoint that takes an active token
-and returns a new token with a refreshed expiration time.
+The token is set to expire in 5 minutus, so wait a while and try to access the private endpoint again. Once the token has expired, a user will need to get a new token from login.
+Since tokens usually have a longer than 5 minutes expiration time, we can create a `/refresh` endpoint that takes an active token and returns a new token with a refreshed expiration time.
 
 ## URL Shortener
 
-A URL shortener that you can use from your terminal - built with shuttle, rocket
-and postgres/sqlx.
+[![Open in Gitpod](https://gitpod.io/button/open-in-gitpod.svg)](https://gitpod.io/#https://github.com/shuttle-hq/shuttle-examples/tree/main/rocket/url-shortener)
+
+A URL shortener that you can use from your terminal - built with shuttle, rocket and postgres/sqlx.
 
 ### Project structure
 
 The project consists of the following files
 
-- `Shuttle.toml` contains the name of the app (if name is s domain will be
-  `s.shuttleapp.rs)`
-- `migrations` folder is for DB migration files created by
-  [sqlx-cli](https://github.com/launchbadge/sqlx/tree/main/sqlx-cli)
-- `src/lib.rs` is where all the magic happens - it creates a shuttle service
-  with two endpoints: one for creating new short URLs and one for handling
-  shortened URLs.
+- `Shuttle.toml` contains the name of the app (if name is `myapp` domain will be `myapp.shuttleapp.rs`)
+- `migrations` folder is for DB migration files created by [sqlx-cli](https://github.com/launchbadge/sqlx/tree/master/sqlx-cli)
+- `src/lib.rs` is where all the magic happens - it creates a shuttle service with two endpoints: one for creating new short URLs and one for handling shortened URLs.
 
-```toml shuttle.toml
+```toml
 [package]
 name = "url-shortener"
 version = "0.1.0"
@@ -407,12 +393,13 @@ edition = "2021"
 nanoid = "0.4"
 rocket = { version = "0.5.0-rc.2", features = ["json"] }
 serde = "1.0"
-shuttle-service = { version = "0.5.2", features = ["sqlx-postgres", "web-rocket"] }
+shuttle-service = { version = "0.6.0", features = ["web-rocket"] }
+shuttle-shared-db = { version = "0.6.0", features = ["postgres"] }
 sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres"] }
 url = "2.2"
 ```
 
-```rust src/lib.rs
+```Rust
 // lib.rs
 #[macro_use]
 extern crate rocket;
@@ -458,7 +445,7 @@ async fn redirect(id: String, state: &State<AppState>) -> Result<Redirect, statu
     Ok(Redirect::to(stored_url.url))
 }
 
-#[post("/", data = "\<url\>")]
+#[post("/", data = "<url>")]
 async fn shorten(url: String, state: &State<AppState>) -> Result<String, status::Custom<String>> {
     let id = &nanoid::nanoid!(6);
 
@@ -487,7 +474,7 @@ async fn shorten(url: String, state: &State<AppState>) -> Result<String, status:
 static MIGRATOR: Migrator = sqlx::migrate!();
 
 #[shuttle_service::main]
-async fn rocket(#[shared::Postgres] pool: PgPool) -> ShuttleRocket {
+async fn rocket(#[shuttle_shared_db::Postgres] pool: PgPool) -> ShuttleRocket {
     MIGRATOR.run(&pool).await.map_err(CustomError::new)?;
 
     let state = AppState { pool };
@@ -499,10 +486,16 @@ async fn rocket(#[shared::Postgres] pool: PgPool) -> ShuttleRocket {
 }
 ```
 
+
+
 ### How to deploy
 
-Once you've sorted out all of the items from above; you can deploy the app by
-simply running:
+Create a project, this will start an isolated deployer container for you under the hood:
+```bash
+cargo shuttle project new
+```
+
+Once you've sorted out all of the items from above; you can deploy the app by simply running:
 
 ```bash
 cargo shuttle deploy
@@ -512,19 +505,28 @@ And your app is live! 🎉🎉🎉
 
 ### How to use it
 
-You can use this URL shortener directly from your terminal. Just copy and paste
-this command to your terminal and replace \<url\> with the URL that you want to
-shorten:
+You can use this URL shortener directly from your terminal. Just copy and paste this command to your terminal and replace `<URL>` with the URL that you want to shorten:
+
+<RequestExample>
 
 ```bash
-curl -X POST -d '\<url\>' https://s.shuttleapp.rs
+curl -X POST -d '<URL>' https://myapp.shuttleapp.rs
 ```
 
-like this:
+</RequestExample>
 
 ```bash
-curl -X POST -d 'https://docs.rs/shuttle-service/latest/shuttle_service/' https://s.shuttleapp.rs
+curl -X POST -d '<URL>' https://myapp.shuttleapp.rs
 ```
 
-You will get the shortened URL back (something like this
-`https://s.shuttleapp.rs/RvpVU_`).
+You will get the shortened URL back, something like this:
+
+<ResponseExample>
+
+```json
+https://myapp.shuttle.app.rs/RvpVU_
+```
+
+</ResponseExample>
+
+
